HelloUltraviolet/Fixtures/RejectedSource/Expressions/PtrNullSynthesis/Expected.uv
//! Expected diagnostic metadata for the PtrNullSynthesis rejected-source specimen.

expectedDiagnostic("E-TYP-1530", "rule.16.Syn-PtrNull-Err")
